--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -139,11 +139,11 @@ setup(
     version=__version__,
     author='Luka Cehovin Zajc',
     author_email='luka.cehovin@protonmail.com',
-    url='https://github.com/vicoslab/routio',
+    url='https://github.com/lukacu/routio',
     project_urls={
-        'Documentation': 'https://github.com/vicoslab/routio',
-        'Source Code': 'https://github.com/vicoslab/routio',
-        'Bug Tracker': 'https://github.com/vicoslab/routio/issues',
+        'Documentation': 'https://github.com/lukacu/routio',
+        'Source Code': 'https://github.com/lukacu/routio',
+        'Bug Tracker': 'https://github.com/lukacu/routio/issues',
     },
     description='Python package for routio IPC library',
     long_description='A simple and efficient interprocess communication (IPC) library for Linux written in C++11.',
